2012-06-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-read-summary-keys): Protect against the key
	being bound to a lambda form.

2012-04-14  Wolfgang Jenkner  <wjenkner@inode.at>

	* gnus-agent.el (gnus-agent-retrieve-headers): Recalculate the range of
	articles when fetch-old is non-nil (bug#11370).

2012-05-04  Wolfgang Jenkner  <wjenkner@inode.at>

	* gnus-picon.el (gnus-picon-properties): New defcustom.
	(gnus-picon-create-glyph): Use it.

2012-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-get-new-news): Respect
	`gnus-group-use-permanent-levels', as documented (bug#11638).

2012-06-10  Dave Abrahams  <dave@boostpro.com>

	* gnus-int.el (gnus-warp-to-article): Limit registry warping to real
	groups (bug#11641).

2012-06-10  Toke Høiland-Jørgensen  <toke@toke.dk>  (tiny change)

	* nnmaildir.el (nnmaildir-request-expire-articles): Ensure that `time'
	is an integer to avoid later problems.

2012-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el: Add a iso-8859-1 cookie to make stuff work under other
	locales.

	* mm-decode.el (mm-display-part): Dissect archives when hitting `RET'
	on a handle.

	* gnus-sum.el (gnus-summary-limit-to-author): Use the current From
	address as the default.
	(gnus-summary-insert-old-articles): Don't include unexistent messages.

	* nnfolder.el (nnfolder-save-buffer): Delete old versions silently.  It
	makes no sense to query the user about internal files.

	* gnus-spec.el: Remove all the byte-compilation stuff, since
	benchmarking shows that it doesn't help when entering large summary
	buffers.

	* gnus-xmas.el (gnus-xmas-define): Remove.

	* gnus-util.el (gnus-byte-code): Remove.

	* gnus-spec.el (gnus-update-format-specifications): Remove outdated
	grouplens stuff.

2012-06-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-msg-mail): Warn the user about Gnus not running
	(bug#11514).

2012-06-07  Stephen Eglen  <S.J.Eglen@damtp.cam.ac.uk>
